fix dialogs z-index to get appear on active

--- a/sass/components/_chart-controls.scss
+++ b/sass/components/_chart-controls.scss
@@ -9,10 +9,14 @@
     align-items: center;
     box-sizing: border-box;
     border-radius: 2px;
+    transition: z-index 0.3s linear;
     @include themify($themes) {
         background: themed('MenuBg');
     }
 
+    &.active {
+        z-index: 5;
+    }
     .ciq-menu {
         width: 100px;
 
